@@ -91,6 +91,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #2202: Fix UnboundLocalError in
+  AbstractDigestAuthHandler.get_algorithm_impls.  Initial patch by Mathieu Dupuy.
+
 - Issue #25718: Fixed pickling and copying the accumulate() iterator with
   total is None.
 
